Revert "Fixed bug: style not showing properly"
This reverts commit 07f1a460a55c328281723451b922a310431551e9.

--- a/src/components/PollQuestions/pollsQuestion.css
+++ b/src/components/PollQuestions/pollsQuestion.css
@@ -71,9 +71,11 @@
 }
 
 .polls-label {
-  font-weight: bold;
   grid-column: 1;
-  align-self: center;
+}
+
+.polls-label--test {
+  display: flex;
 }
 
 .polls__questions-mt {
