--- a/src/components/polls.css
+++ b/src/components/polls.css
@@ -54,10 +54,12 @@
   align-items: center;
 }
 
+.polls-label {
+  font-weight: bold;
+}
+
 .polls-label--top {
   align-self: flex-start;
-  font-weight: bold;
-  grid-column: 1;
 }
 
 .polls-input {
